--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -2,7 +2,8 @@
 $doc-font-size: 16;
 $doc-line-height: 26;
 $paragraph-indent: true !default;
-$base-font: 'Montserrat',Times, serif;
+// $base-font: 'Montserrat',Times, serif;
+$base-font: 'Montserrat',Garamond, serif;
 $heading-font: 'Roboto', sans-serif;
 $code-font:  "Montserrat", monospace;
 $alt-font: $base-font;
