--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -2,9 +2,9 @@
 $doc-font-size: 16;
 $doc-line-height: 26;
 $paragraph-indent: true !default;
-//$base-font: 'Montserrat',Times, serif;
+$base-font: 'Montserrat',Times, serif;
 //$base-font: 'Sawarabi Mincho',Times, serif;
-$base-font: 'Cormorant', serif;
+//$base-font: 'Cormorant', serif;
 $heading-font: 'Roboto', sans-serif;
 $code-font:  "Montserrat", monospace;
 $alt-font: $base-font;
