--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -57,7 +57,7 @@ p {
 
 u,
 ins {
-  text-decoration: none;
+  text-decoration: underline;
   border-bottom: 1px solid $text-color;
   a {
     color: inherit;
