--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -19,7 +19,23 @@ layout: default
     {% unless page.header.overlay_color or page.header.overlay_image %}
       <h1 class="page__title">{{ page.title }}</h1>
     {% endunless %}
-    {{ content }}
-     {% if page.link %}<div><a href="{{ page.link }}" class="btn">{{ site.data.ui-text[site.locale].ext_link_label | default: "Direct Link" }}</a></div>{% endif %}
+    <section class="page__content" itemprop="text">
+        {{ content }}
+        {% if page.link %}<div><a href="{{ page.link }}" class="btn">{{ site.data.ui-text[site.locale].ext_link_label | default: "Direct Link" }}</a></div>{% endif %}
+        
+        {% if page.collection == 'publications' %}
+          {% if page.abstract %}
+            <p>{{ page.abstract }}</p>
+          {% endif %}
+          {% if page.paperurl %}
+            <p><a href={{ page.paperurl }}>Download paper here</a></p>
+          {% endif %}
+          {% if page.citation and page.paperurl %}
+            <p>Recommended citation: {{ page.citation }} <a href="{{ page.paperurl }}"><u>{{ page.paperurl }}</u></a></p>
+          {% elsif page.citation %}
+            <p>Recommended citation: {{ page.citation }} </p>
+          {% endif %}
+        {% endif %}
+</section>
   </div>
 </div>
