--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -35,7 +35,7 @@
         <li><a href="mailto:{{ author.email }}"><i class="fa fa-fw fa-envelope-square" aria-hidden="true"></i> maksym.khomenko@economics.gu.se</a></li>
       {% endif %}
       {% if author.mobile %}
-        <li><a href="tel:{{ author.mobile }}"><i class="fa fa-fw fa-phone" aria-hidden="true"></i> +46(0)704-609-338 </a></li>
+        <li><a href="tel:{{ author.mobile }}"><i class="fa fa-fw fa-phone" aria-hidden="true"></i> +46 704 609 338 </a></li>
       {% endif %}
       {% if author.keybase %}
         <li><a href="https://keybase.io/{{ author.keybase }}"><i class="fa fa-fw fa-key" aria-hidden="true"></i> Keybase</a></li>
