--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -32,10 +32,10 @@
         <li><a href="{{ author.uri }}"><i class="fa fa-fw fa-chain" aria-hidden="true"></i> {{ site.data.ui-text[site.locale].website_label | default: "Website" }}</a></li>
       {% endif %}
       {% if author.email %}
-        <li><a href="mailto:{{ author.email }}"><i class="fa fa-fw fa-envelope-square" aria-hidden="true"></i> maksym.khomenko@economics.gu.se</a></li>
+        <li><a href="mailto:{{ author.email }}"><i class="fa fa-fw fa-envelope-square" aria-hidden="true"></i> maksym.i.khomenko@gmail.com</a></li>
       {% endif %}
       {% if author.mobile %}
-        <li><a href="tel:{{ author.mobile }}"><i class="fa fa-fw fa-phone" aria-hidden="true"></i> +46 704 609 338 </a></li>
+        <li><a href="tel:{{ author.mobile }}"><i class="fa fa-fw fa-phone" aria-hidden="true"></i> +46 765 141 841 </a></li>
       {% endif %}
       {% if author.keybase %}
         <li><a href="https://keybase.io/{{ author.keybase }}"><i class="fa fa-fw fa-key" aria-hidden="true"></i> Keybase</a></li>
